
	* bin/cygport.in (__check_unstable): Added unstable API guard function.
	(__check_function): New function to check if function is defined.
	(__src_prep) [UNSTABLE]: Run src_unpack_hook in original source tree.

	* bin/prep_gnu_info.sh:
	Accept RESTRICT=postinst-info to not add install-info postinst command.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am:
	* bin/cygport.in (__prepetc):
	scrollkeeper has been replaced by rarian, and scrollkeeper-update
	is just a placeholder which does nothing.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile): Support Gnome2-PanelApplet.

	* lib/php.cygclass: Overhaul to support both PECL and PEAR extensions.

	* lib/berkdb.cygclass (berkdb_install): Support db-4.6.
	(berkdb_postinst): Fix postinstall scripts.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/aspell-dict.cygclass: New cygclass for Aspell dictionaries.

	* bin/cygport.in (cygconf): Properly detect autoconf-2.6x configure.
	(__src_fetch): Support local files not in working directory.
	(__prepdoc): Search for Cygwin READMEs by PKG_HINTS names also.

	* lib/gtkmm.cygclass (gtkmm_compile): Pass -no-undefined to LDFLAGS.

	* lib/perl.cygclass (perl_compile): Change Makefile.PL argument order.

	* lib/kde3.cygclass: Support kdevelop-3.5.0.
	(kde3_compile): Remove berkeley-db from default configure arguments.
	(kde3_install): Sanity check.

	* lib/gstreamer.cygclass: Fix aliases.

	* lib/pygtk.cygclass: Allow monolithic builds of gnome-python et al.
	(PYGTK_INCLUDEDIR, PYGTK_LIBDIR, PYGTK_DATADIR): Define.

	* lib/ruby-gnome2.cygclass: Add support for SVN checkouts.
	(src_compile): Speed up compile by lndir'ing only the relevant subdir.

	* bin/cygport.in (__list_deps): Really ignore Windows libraries.

	* lib/pygtk.cygclass: Add support for gtksourceview2.

	* lib/wxwidgets.cygclass (_find_wx_config):
	Fix 2.8 detection.
	Cygwin does not have support for Unicode builds, so error out.

	* lib/gst-plugins0.8.cygclass: Fixed spc, arts, and cdparanoia plugins.
