@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.95 2007-12-17 16:34:23 yselkowitz Exp $
+# $Id: cygport.in,v 1.96 2007-12-17 22:40:10 yselkowitz Exp $
 #
 ################################################################################
 
@@ -147,11 +147,15 @@ __show_version() {
 		Copyright (C) 2006, 2007 Yaakov Selkowitz
 
 		This program comes with NO WARRANTY, to the extent permitted by law.
+
 		You may redistribute copies of this program under the terms of
-		the GNU General Public License version 2.
+		the GNU General Public License as published by the Free Software
+		Foundation, either version 3 of the License, or (at your option) any
+		later version.
+
 		For more information about these matters, see the file named COPYING.
 
-		Written by Yaakov Selkowitz for the Cygwin Ports project 
+		Written by Yaakov Selkowitz for the Cygwin Ports project
 		<http://cygwinports.dotsrc.org/>.
 		_EOF
 }
